2004-02-18  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.c:
	  Clean up around chorus effect.
	  Fix bug of opt_pan_delay with opt_surround_chorus.
	  Rewrite DSP Chorus Effect.

2004-02-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* script/Makefile.{am.in}, script/lspatch.pl, script/readme.txt:
	  Add lspatch.pl (list the entire instrument configuration)
	* timidity/timidity.c (set_gus_patchconf_opts):
	  Change behavior of "note=" patch option

2004-02-17  Takashi Iwai <tiwai@suse.de>

	* interface/{alsaseq_c.c,gtk_i.c,ncurs_c.c,soundspec.c,tk_c.c,
	  x_wrdwindow.c}, libunimod/mloader.c, timidity/{aiff_a.c,alsa_a.c,
	  common.c,effect.c,freq.c,instrum.c,jack_a.c,mfi.c,mix.c,
	  mod2midi.c,oss_a.c,playmidi.c,rcp.c,readmidi.c,resample.c,
	  reverb.c,smplfile.c,tables.c,timidity.c,vorbis_a.c}:
	  Fix compile warnings with the recent gcc.

2004-02-17  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* configs/msc7-project.zip:
	  Support for Windows Installer in VC7.
	  Fix portaudio output in VC7.

2004-02-17  Saito <saito2@digitalme.com>

	* timidity/readmidi.[ch], timidity/playmidi.c:
	  Support for GM2 Reverb Type, etc.

2004-02-17  skeishi <s_keishi@mutt.freemail.ne.jp>

	* interface/winsyn_c.c:
	  Fix timer of TWSYNTH.

2004-02-17  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/resample.c (resample_lagrange): Bug fix.

2004-02-16  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch]:
	  Implement new reverberation algorithm: Delay and Panning Delay.
	* timidity/resample.[ch], timidity/recache.c, timidity/mix.c:
	  Fasten.

2004-02-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/aiff_a.c: Fixed AIFC sample size field.

2004-02-15  Saito <saito2@digitalme.com>

	* timidity/portaudio_a.c:
	  Fix for Win32.
	* configs/msc[67]-project.zip:
	  Add portaudio files and modify projects.
	* timidity/playmidi.c:
	  Fix fatal typo around Chamberlin filter.